force-app/main/default/objects/Shortlisted_Unit__c/Shortlisted_Unit__c.object-meta.xml
<CustomObject>
    <label>Shortlisted Unit</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Shortlisted Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shortlisted Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>