force-app/main/default/objects/Shortlisted_Unit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Shortlisted Units</relationshipLabel>
    <relationshipName>Shortlisted_Units</relationshipName>
    <type>Lookup</type>
</CustomField>