force-app/main/default/objects/Shortlisted_Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <formula>TEXT( Unit__r.Unit_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Status</label>
    <type>Text</type>
</CustomField>